# cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Coordinate.h  Line.cpp  Line.h  Oval.h  Ovallearn.cc  Point.h  TestLine.cc  file.c  file.cc  file.h  iterator.cpp  learn.cc  readme  test.c  testPoint.cc
ModernRomanNumerals/: ModernRomanNumerals2.c  log.txt
cmake/: antlr4.cmake  router.cmake
cmake_module/: variable.cmake
cmake_presets/: CMakePresets.json  readme
include/: types.hpp
src/: CMakeLists.txt  spam.cpp
src/UniqueTypes_demo/: CMakeLists.txt  UniqueTypes_demo.cpp
src/boost/: CMakeLists.txt
src/boost/boost_spirit/: CMakeLists.txt  boost_spirit.cpp
src/include/: MaxType.hpp  compiler_detect.h  spam.h  types.hpp
src/main/: CMakeLists.txt  demo.c  main.cpp
src/mathAntlr4/: CMakeLists.txt  MathLexer.g4  MathParser.g4  main.cpp
src/py/: CMakeLists.txt  main.cpp
src/python/: CMakeLists.txt
src/python/py/: CMakeLists.txt  debug.conf.h.in  main.cpp
src/python/spam/: CMakeLists.txt  spam.cpp  spam.h.in
src/python/utils/: CMakeLists.txt  utils.i
src/std/: CMakeLists.txt  main.cpp
src/template_demo/: CMakeLists.txt  template_params_demo.cpp
src/template_params_demo/: CMakeLists.txt  template_params.hpp  template_params_demo.cpp
src/types/: CMakeLists.txt  compiler_detect.h  sort.cpp  sort.hpp  types.cpp  types.hpp
tests/: CMakeLists.txt
tests/ModernRomanNumerals/: CMakeLists.txt  ModernRomanNumerals2.c
tests/cmakeWorkflowPresets/: CMakeLists.txt  workflowPresets.c
tests/com/: CMakeLists.txt  coTest.c
tests/cuda/: CMakeLists.txt  main.cu
tests/functuon_pointer_in_struct/: CMakeLists.txt  file.c
tests/mysqrt/: CMakeLists.txt  test1.cc
tests/thread/: CMakeLists.txt  test.c  test2.c
tests/window/: CMakeLists.txt  index.html  main.c  ok.rc  resource.h  ribbon.mfcribbon-ms
tests/window_wrapper/: CMakeLists.txt  main.cpp  window_wrapper.cpp  window_wrapper.hpp
