cmake_minimum_required(VERSION 3.10)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_module ${CMAKE_MODULE_PATH})
cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME PROJ)
project(${PROJ} LANGUAGES CXX C)
include(router)
include(variable)
if(MINGW)
    add_link_options(-static)
endif()
router_directories()
# find_package(Python REQUIRED COMPONENTS Development Interpreter)
# find_package(jansson REQUIRED)
# python_add_library(spam WITH_SOABI spam.c)
# target_link_libraries(spam PRIVATE jansson::jansson)
# install(TARGETS spam DESTINATION $ENV{PYTHONPATH})