cmake_path(GET CMAKE_CURRENT_LIST_DIR STEM PROJ)
# file(GLOB PROJ_SOURCES RELATIVE ${CMAKE_CURRENT_LIST_DIR} *.c;*.C;*.c++;*.cc;*.cpp;*.cxx;*.cu;*.mpp;*.m;*.M;*.mm;*.ixx;*.cppm;*.ccm;*.cxxm;*.c++m;*.h;*.hh;*.h++;*.hm;*.hpp;*.hxx;*.in;*.txx;*.f;*.F;*.for;*.f77;*.f90;*.f95;*.f03;*.hip;*.ispc)
configure_file(spam.h.in spam.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
if(MODULE_NAME STREQUAL PROJ)
    set(TYPE STATIC)
endif()
Python_add_library(${PROJ} ${TYPE} spam.cpp)
# if(NOT MODULE_NAME STREQUAL PROJ)
#     install(TARGETS ${PROJ} DESTINATION ${Python_SITELIB})
# endif()